nixidy/generated/prod/audiobookshelf/HTTPRoute-audiobookshelf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: audiobookshelf
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: audiobookshelf
  name: audiobookshelf
  namespace: media
spec:
  hostnames:
    - audiobookshelf.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          namespace: media
          port: 13378
          weight: 1
